Fixed text-wrap for text in p html elements on search page Fixed jumping scrollbar on search page

--- a/css/samplegrid.css
+++ b/css/samplegrid.css
@@ -1,3 +1,9 @@
+/* Fix retarded scrollbar jumping */
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 /* Makes the images wrap to a new line */
 .square-grid {
     display: flex;
